@@ -735,4 +735,102 @@ public class FileAccessImplTest extends AbstractIdeContextTest {
     assertThat(context.getProgressBarMap()).isEmpty();
     assertThat(archiveFile).hasSize(fileSize).hasSameBinaryContentAs(tempFile);
   }
+
+  /**
+   * Test of {@link FileAccessImpl#symlink(Path, Path, boolean)} when broken junctions exist. This simulates the scenario
+   * described in issue #1169 where mklink fails with "Cannot create a file when that file already exists" when trying
+   * to create a junction over a broken junction.
+   */
+  @Test
+  public void testSymlinkOverwritesBrokenJunction(@TempDir Path tempDir) throws IOException {
+
+    // arrange
+    IdeContext context = IdeTestContextMock.get();
+    if (!windowsJunctionsAreUsed(context, tempDir)) {
+      context.info("Test skipped: Windows junctions are not used in this environment.");
+      return;
+    }
+
+    FileAccess fileAccess = new FileAccessImpl(context);
+    Path sourceDir = tempDir.resolve("source");
+    Path targetLink = tempDir.resolve("junction");
+
+    // Create initial source directory and junction
+    fileAccess.mkdirs(sourceDir);
+    fileAccess.symlink(sourceDir, targetLink, false);
+
+    // Verify junction was created and works
+    assertThat(targetLink).existsNoFollowLinks();
+    assertThat(targetLink.toRealPath()).isEqualTo(sourceDir);
+
+    // Simulate the scenario: delete the source directory to break the junction
+    fileAccess.delete(sourceDir);
+
+    // Verify the junction is now broken (exists but points to non-existent target)
+    assertThat(targetLink).existsNoFollowLinks(); // junction still exists
+    assertThat(sourceDir).doesNotExist(); // but target is gone
+
+    // Create a new source directory at different location
+    Path newSourceDir = tempDir.resolve("newSource");
+    fileAccess.mkdirs(newSourceDir);
+
+    // act - This should not fail even though a broken junction exists at targetLink
+    fileAccess.symlink(newSourceDir, targetLink, false);
+
+    // assert - The junction should now point to the new source
+    assertThat(targetLink).existsNoFollowLinks();
+    assertThat(targetLink.toRealPath()).isEqualTo(newSourceDir);
+  }
+
+  /**
+   * Test of enhanced {@link FileAccessImpl#isJunction(Path)} method to ensure it handles broken junctions gracefully.
+   * This simulates the enhanced logic for detecting broken junctions on non-Windows systems.
+   */
+  @Test
+  public void testIsJunctionHandlesBrokenLinks(@TempDir Path tempDir) throws IOException {
+
+    // arrange
+    IdeContext context = IdeTestContextMock.get();
+    FileAccess fileAccess = new FileAccessImpl(context);
+
+    if (!context.getSystemInfo().isWindows()) {
+      // On non-Windows, create a broken symlink to simulate a broken junction
+      Path sourceDir = tempDir.resolve("source");
+      Path brokenLink = tempDir.resolve("brokenLink");
+
+      fileAccess.mkdirs(sourceDir);
+      fileAccess.symlink(sourceDir, brokenLink, false);
+
+      // Verify link works initially
+      assertThat(brokenLink).existsNoFollowLinks();
+      assertThat(brokenLink.toRealPath()).isEqualTo(sourceDir);
+
+      // Delete the source to break the link
+      fileAccess.delete(sourceDir);
+
+      // The broken symlink should still exist but point to nothing
+      assertThat(brokenLink).existsNoFollowLinks();
+      assertThat(sourceDir).doesNotExist();
+
+      // act & assert - the enhanced symlink method should handle the broken link
+      Path newSource = tempDir.resolve("newSource");
+      fileAccess.mkdirs(newSource);
+
+      // This should not fail, even with the broken symlink
+      fileAccess.symlink(newSource, brokenLink, false);
+      assertThat(brokenLink.toRealPath()).isEqualTo(newSource);
+    } else {
+      context.info("Test adapted for Windows environment - testing basic junction functionality");
+      // On Windows, just test that basic junction functionality works
+      Path sourceDir = tempDir.resolve("source");
+      Path junctionLink = tempDir.resolve("junction");
+
+      fileAccess.mkdirs(sourceDir);
+      fileAccess.symlink(sourceDir, junctionLink, false);
+
+      assertThat(junctionLink).existsNoFollowLinks();
+      assertThat(junctionLink.toRealPath()).isEqualTo(sourceDir);
+    }
+  }
+
 }
